--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         tenetur molestiae maxime exercitationem ducimus repudiandae optio sed repellat suscipit atque repellendus quas!
     </p>
 
-    <h2>my server is <a class="server-online"></a></h2>
+    <h2>My server is <a class="server-online"></a></h2>
+
+    <h2 class="server-motd"></h2>
+
+    <h2>Players online: <a class="server-players"></a>/<a href="" class="server-max"></a></h2>
+
 
     <script src="https://mcapi.us/scripts/minecraft.min.js"></script>
     <script src="./script.js"></script>
