--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         tenetur molestiae maxime exercitationem ducimus repudiandae optio sed repellat suscipit atque repellendus quas!
     </p>
 
-    <h2>My server is <a class="server-online"></a></h2>
+    <h2>Vocal Smp is <a class="server-online"></a></h2>
 
-    <h2 class="server-motd"></h2>
+    <h2>MOTD: <a class="server-motd"></a></h2>
 
     <h2>Players online: <a class="server-players"></a>/<a href="" class="server-max"></a></h2>
 
