adding server version and image

--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 </head>
 
 <body>
-    <h1>server info</h1>
-    <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam cumque ipsam quibusdam quam rem non, at illum
-        tenetur molestiae maxime exercitationem ducimus repudiandae optio sed repellat suscipit atque repellendus quas!
-    </p>
+    <h1 class="title">server info</h1>
 
     <h2>Vocal Smp is <a class="server-online"></a></h2>
+
+    <h2>server version: <a class="server-version"></a></h2>
 
     <h2>MOTD: <a class="server-motd"></a></h2>
 
     <h2>Players online: <a class="server-players"></a>/<a href="" class="server-max"></a></h2>
 
+    <img src="https://mcapi.us/server/image?ip=147.135.105.18&port=25567&theme=dark&title=VocalSMP" alt="">
 
     <script src="https://mcapi.us/scripts/minecraft.min.js"></script>
     <script src="./script.js"></script>
